data/derived/fa15/progs/unify/prog2136.ml.out
Characters 73-77:
  wwhile (funt, b);;
          ^^^^
Error: This expression has type 'a -> int
       but an expression was expected of type 'a -> 'a * bool
       Type int is not compatible with type 'a * bool 
